# code-review-env

./: .gitignore  BOUNDARY_FIX_SUMMARY.md  CODE_OF_CONDUCT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  EVALUATION_RESULTS.md  HOW_TO_CONFIGURE_HF_SPACE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_HF_SPACE.md  SECURITY.md  TEST_GUIDE.md  __init__.py  app.yaml  client.py  contribute.md  inference.py  lost_commits_backup.txt  main_files.txt  models.py  openenv.yaml  pyproject.toml  run_tests.py  score_clamp.py  test_deployment.py  validate_inference_format.py  verify_boundary_fixes.py  verify_scores.py
data/: snippets.py
scripts/: benchmark.py  eval_batch.py
server/: app.py  environment.py
tasks/: task_easy.py  task_hard.py  task_medium.py
web/: index.html  script.js  styles.css
